pages/components/TitlePage/titlepage.module.css
.wrapper {
  display: flex;
  flex-direction: column;
  height: calc(100vh - 6rem);
  justify-content: center;
  width: calc(100% - 2 * 2.5%);
  padding: 0 calc(2.5%);
  padding-bottom: 6rem;
  margin-bottom: 3rem;
  box-shadow: var(--shadow-hard);
  
}

.wrapper > img {
  position: absolute;
  width: 100%;
  height: 100vh;
  max-height: unset;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  object-fit: cover;
  z-index: -2;
}

.wrapper::after {
  content: "";
  position: absolute;
  top: 0; 
  bottom: 0;
  left: 0; 
  right: 0;
  height: 100vh;
  width: 100%;
  z-index: -1;
  background-color: var(--background);
  filter: opacity(0.7);
  backdrop-filter: blur(1rem);

}

.wrh1 {
  font-size: 6rem;
  font-weight: bold;
  overflow: hidden;
  text-overflow: ellipsis;
  color: var(--body);
  width: fit-content;
  max-width: calc(100% - 2 * 1rem);
  margin: 1rem;
  border: none;
  box-shadow: none;
  text-shadow: 3px 3px var(--background);

}

.wrapper p {
  width: fit-content;
  margin: 0;
  padding: 1rem;
  z-index: 5;
  color: var(--body)

}

@media (max-width: 740px) {
  .wrapper > h1 {
    font-size: 4rem;
  }
}

